# schc-work

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  config.cmake
applications/: CMakeLists.txt
applications/delivery/lpwan_model/: CMakeLists.txt
applications/delivery/lpwan_model/app/: app.c
applications/delivery/lpwan_model/device/: device.c
applications/delivery/lpwan_model/device/include/: measurement_service.h
applications/delivery/lpwan_model/device/src/: measurement_service.c
applications/delivery/lpwan_model/schc_core/: CMakeLists.txt  schc_core.c
applications/demo/: CMakeLists.txt  main.c
applications/lpwan_model/: CMakeLists.txt
applications/lpwan_model/app/: CMakeLists.txt  app.c
applications/lpwan_model/device/: CMakeLists.txt  device.c
applications/lpwan_model/include/: commons.h
applications/lpwan_model/schc_core/: CMakeLists.txt
cmake/: AddGitSubmodule.cmake
configure_files/: CMakeLists.txt  schc_sdk_params.h.in
include/: server.h
l2/ahoi_posix_host/: CMakeLists.txt  flags.cmake
l2/ahoi_posix_host/include/: core.h  fullsdkl2.h  fullsdkl2common.h
l2/ahoi_posix_host/src/: fullsdkl2a.c
libs/: CMakeLists.txt
libs/commons/: CMakeLists.txt
libs/commons/include/: common_defs.h  net_helper.h
libs/commons/src/: net_helper.c
libs/schc_commons/: CMakeLists.txt
libs/schc_commons/include/: schc_helper.h
libs/schc_commons/src/: schc_helper.c
patches/: schc.patch
templates/: custom_template.c  lpwan_scenario_coap_template.c
tests/: CMakeLists.txt  test_rule_id_var_size.c  test_schc_push_pull.c
tests/integration/ahoi_linux/: CMakeLists.txt  test_l2_ahoi.c
tests/test_helpers/: packet_builders.c  packet_builders.h  schc_mocks.c  schc_mocks.h
