
set(MULTI_EXEC_APPS)

list(APPEND MULTI_EXEC_APPS "lpwan_model")

if (${APP_NAME} IN_LIST MULTI_EXEC_APPS)
    set(APP_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/${APP_NAME}" PARENT_SCOPE)
    add_subdirectory(${APP_NAME})
    set(EXEC_NAMES ${EXEC_NAMES} PARENT_SCOPE)
else()
    set(APP_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}" PARENT_SCOPE)
endif ()